--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -5,7 +5,7 @@
             <th>#</th>
             <th>Bandera</th>
             <th>Nombre</th>
-            <th>Poblacion</th>
+            <th>Población</th>
             <th></th>
         </tr>
     </thead>
